[tool.black]
line-length = 110
target-version = ["py39"]

[tool.poetry]
name = "geo_saas"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gunicorn = "21.2.0"
pyramid = "2.0.1"
c2cwsgiutils = { extras = ["standard", "broadcast", "oauth2"], version = "5.2.2" }
pyramid-mako = "1.1.0"
certifi = "2023.7.22"

[tool.poetry.dev-dependencies]
prospector = { version = "1.10.2", extras = ["with_bandit", "with_mypy"] }
pytest = "7.4.0"

[tool.poetry.plugins."paste.app_factory"]
main = "geo_saas:main"


[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "0.1.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"
